<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 顶部保存和返回按钮 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FF6000"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/patient_iv_back"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/patient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="标题"
                android:maxLength="500"
                android:singleLine="false"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/patient_iv_save"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_save" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FF6000"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/patient_iv_img"
            android:layout_width="105dp"
            android:layout_height="70dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/empty_photo" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#FFFFFF" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/patient_splid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="入院编号"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/patient_splid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/patient_et_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/patient_str_no"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/patient_splid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="姓名"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/patient_splid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/patient_et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/patient_str_name"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/patient_splid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="性别"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/patient_splid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/sex_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="男"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/famale_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女"
                    android:textSize="15sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/patient_splid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="联系号码"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/patient_splid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/patient_et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/patient_str_pho"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/patient_splid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="出生日期"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/patient_splid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/patient_tv_birthday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/patient_str_defalut_bir"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/patient_bt_birthday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/patient_str_bir"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/patient_splid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="病情简介"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/patient_splid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/patient_et_context"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/patient_str_content"
                android:maxLength="500"
                android:singleLine="false"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>